--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_SECRET=1a17423e4dec4ea6ed893d8a05f28ed3
 # Database
 
 DB_HOST=localhost
-DB_USER=postgress
+DB_USER=postgres
 DB_PASS=docker
 DB_NAME=gympoint
 
