--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/rodrigocichetto/bootcamp-gostack-desafio-02#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
