--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,10 @@ services:
       - POSTGRES_DB=gympoint
     volumes:
       - ./.docker/postgres/data:/var/lib/postgresql/data
+
+  mongo:
+    image: "mongo:4"
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./.docker/mongo/data:/data/db
