--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,12 @@ REDIS_HOST=
 REDIS_POST=
 
 # Mail
+# Amazon SES, Mailgun, Sparkpost
 
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USER=
-MAIL_PASS=
+MAIL_USER=25ff1470e134fe
+MAIL_PASS=9d8671571e773c
 
 # Sentry
 
