--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,8 @@ MONGO_URL=mongodb://localhost:27017/gympoint
 
 # Redis
 
-REDIS_HOST=
-REDIS_POST=
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
 
 # Mail
 # Amazon SES, Mailgun, Sparkpost
